testing resume pdf link

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
             <p>
               I would love to be an addition to your team as an Entry Level
               Software Developer. Please feel free to reach out to me on
-              LinkedIn. <br />
+              LinkedIn. Finished_Resume_NOV2021.pdf<br />
             </p>
           </div>
         </div>
