--- a/about.html
+++ b/about.html
@@ -66,7 +66,8 @@
             <p>
               I would love to be an addition to your team as an Entry Level
               Software Developer. Please feel free to reach out to me on
-              LinkedIn. Finished_Resume_NOV2021.pdf<br />
+              LinkedIn and check out my resume.
+              <a href="Finished Resume_NOV2021.pdf"></a>
             </p>
           </div>
         </div>
