forgot to update

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                 <a href="https://www.linkedin.com/in/pamela-long-0049b297/">Find Me on LinkedIn!</a>
               </li>
               <li>
-                <a href="assets/img/Resume_NOV2021.pdf"></a>
+                <a href="assets/img/Resume_NOV2021.png"></a>
               </li>
             </ul>
           </div>
