testing resume link

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                 <a href="https://www.linkedin.com/in/pamela-long-0049b297/">Find Me on LinkedIn!</a>
               </li>
               <li>
-                <a href="assets/img/Resume_NOV2021.png"></a>
+                <a href="https://docs.google.com/document/d/1RibLqpCUwoNilDa947QH153KAQsmfvyAuH_EiSavk9Q/edit#heading=h.5x0d5h95i329">My Resume!</a>
               </li>
             </ul>
           </div>
@@ -69,7 +69,7 @@
             <p>
               I would love to be an addition to your team as an Entry Level
               Software Developer. Please feel free to reach out to me on
-              LinkedIn and check out my resume.
+              LinkedIn and check out my Resume.
             </p>
           </div>
         </div>
