--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                 <a href="https://www.linkedin.com/in/pamela-long-0049b297/">Find Me on LinkedIn!</a>
               </li>
               <li>
-                <a href="https://docs.google.com/document/d/1RibLqpCUwoNilDa947QH153KAQsmfvyAuH_EiSavk9Q/edit#heading=h.5x0d5h95i329">My Resume!</a>
+                <a href="https://docs.google.com/document/d/1VSAiaG4pGRVRwL6eOae1diuZJ9yR6vwrl4zuyhslNxM/edit#">My Resume!</a>
               </li>
             </ul>
           </div>
