resume link was working before, had a typo on all my pages

--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Pamela Long Portfolio</title>
+    <title>Pamela Long - About Me</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -48,9 +48,10 @@
               <li><a href="services.html">Services</a></li>
               <li><a href="works.html">Works</a></li>
               <li>
-                <a href="https://www.linkedin.com/in/pamela-long-0049b297/"
-                  >Find Me on LinkedIn!</a
-                >
+                <a href="https://www.linkedin.com/in/pamela-long-0049b297/">Find Me on LinkedIn!</a>
+              </li>
+              <li>
+                <a href="https://docs.google.com/document/d/1RibLqpCUwoNilDa947QH153KAQsmfvyAuH_EiSavk9Q/edit?usp=sharing/">My Resume!</a>
               </li>
             </ul>
           </div>
@@ -68,7 +69,7 @@
             <p>
               I would love to be an addition to your team as an Entry Level
               Software Developer. Please feel free to reach out to me on
-              LinkedIn. <br />
+              LinkedIn and check out my Resume.
             </p>
           </div>
         </div>
