--- a/single-LavishMotors.html
+++ b/single-LavishMotors.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Pamela Long - Lavish Motors</title>
+    <title>Pamela Long - About Me</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -50,6 +50,9 @@
               <li>
                 <a href="https://www.linkedin.com/in/pamela-long-0049b297/">Find Me on LinkedIn!</a>
               </li>
+              <li>
+                <a href="https://docs.google.com/document/d/1RibLqpCUwoNilDa947QH153KAQsmfvyAuH_EiSavk9Q/edit?usp=sharing/">My Resume!</a>
+              </li>
             </ul>
           </div>
           <div class="col-md-6 d-none d-md-block mr-auto">
@@ -66,7 +69,7 @@
             <p>
               I would love to be an addition to your team as an Entry Level
               Software Developer. Please feel free to reach out to me on
-              LinkedIn. <br />
+              LinkedIn and check out my Resume.
             </p>
           </div>
         </div>
